--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@wulechuan/echarts-vue2-component",
     "author": "wulechuan <wulechuan@live.com>",
-    "version": "0.3.0-beta1",
+    "version": "0.3.0-beta2",
     "description": "在 Vuejs 框架下方便的使用 eChartsjs。并支持 TypeScript 语法。",
     "license": "WTFPL",
     "keywords": [
@@ -14,17 +14,18 @@
         "typescript",
         "电子图表"
     ],
-    "main": "dist/typescript/index.ts",
-    "types": "dist/typescript/echarts.d.ts",
+    "main": "dist/typescript/index.vue",
+    "types": "source/index.d.ts",
     "scripts": {
-        "_lint:dist": "eslint    --fix  ./dist/**/*.ts  ./dist/**/*.js",
-        "_lint:source": "eslint  --fix  ./source/**/*.ts  ./gulpfile.esm.js/**/*",
-        "_dist": "gulp  --silent  buildOnce",
-        "lint": "npm  run  _lint:source    &    npm  run  _lint:dist",
-        "dist": "npm  run  _dist    &&    npm  run  _lint:dist",
+        "remove-all-html-docs": "rimraf  ./ReadMe*.html  ./documents/**/*.html",
+        "generate-html-docs": "npm  run  remove-all-html-docs    &&    wlc-md-to-html  -i ./*.md,./documents/**/*.md  -E3  -C ./documents/wlc-md-to-html.config.js  --to '*'",
+        "_lint:dist": "eslint    --fix    ./dist/**/*.vue",
+        "_lint:source": "eslint  --fix  ./source/**/*.vue  ./source/**/*.ts  ./gulpfile.esm.js/**/*  ./tsconfig.js",
+        "lint": "npm  run  _lint:source                                         &    npm  run  _lint:dist",
+        "dist": "npm  run  _lint:source    &&    gulp   --silent  buildOnce    &&    npm  run  _lint:dist",
         "start": "gulp  --silent",
-        "before-git-commit": "npm  i    &&    npm  run  _lint:source    &&    npm  run  dist",
-        "prepublishOnly": "npm  run  _lint:source    &&    npm  run  dist"
+        "before-git-commit": "npm  i    &&    npm  run  dist",
+        "prepublishOnly": "npm                     run  dist"
     },
     "homepage": "https://github.com/wulechuan/wulechuan-typescript-echarts-vue2-component#readme",
     "repository": {
@@ -36,26 +37,34 @@
     },
     "peerDependencies": {
         "echarts": "^4.6.0",
-        "vue": "^2.6.11",
-        "vue-property-decorator": "^8.4.0"
+        "vue": "^2.6.11"
     },
     "dependencies": {
         "lodash.debounce": "^4.0.8",
-        "resize-detector": "^0.2.1"
+        "resize-detector": "^0.2.1",
+        "vue-property-decorator": "^8.4.1"
     },
     "devDependencies": {
+        "@types/echarts": "^4.4.4",
         "@types/lodash.debounce": "^4.0.6",
-        "@types/echarts": "^4.4.2",
         "@types/vue": "^2.0.0",
+        "@typescript-eslint/eslint-plugin": "^2.23.0",
+        "@typescript-eslint/parser": "^2.23.0",
         "@vue/eslint-config-typescript": "^5.0.2",
-        "@typescript-eslint/eslint-plugin": "^2.26.0",
-        "@typescript-eslint/parser": "^2.26.0",
-        "@wulechuan/css-stylus-markdown-themes": "^6.4.0",
+        "@wulechuan/css-stylus-markdown-themes": "^6.4.7",
         "@wulechuan/gulp-classical-task-cycle": "^0.3.0",
+        "@wulechuan/vue2-sfc-from-typescript-to-javascript": "^0.1.4",
+        "cssnano": "^4.1.10",
         "eslint": "^6.8.0",
+        "eslint-plugin-vue": "^6.2.2",
         "esm": "^3.2.25",
+        "fs-extra": "^8.1.0",
+        "gulp-postcss": "^8.0.0",
+        "gulp-stylus": "^2.7.0",
+        "gulp-uglify-es": "^2.0.0",
         "indent.js": "^0.3.5",
         "plugin-error": "^1.0.1",
+        "rimraf": "^3.0.2",
         "through2": "^3.0.1",
         "tslib": "^1.11.1",
         "typescript": "^3.8.3"
