--- a/demos/demo-of-javascript--compact-echarts-source/package.json
+++ b/demos/demo-of-javascript--compact-echarts-source/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@wulechuan/echarts-vue2-component": "file:../..",
+        "echarts": "^4.7.0",
         "vue": "^2.6.11"
     },
     "devDependencies": {
