--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "eslint.enable": true,
     "files.exclude": {
         "**/.DS_Store": true,
-        // "**/node_modules": true,
+        "**/node_modules": true,
         "package-lock.json": true,
         "babel.config.js": true,
         ".markdownlint*": true,
