--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
         "typescript",
         "电子图表"
     ],
-    "main": "dist/typescript/index.vue",
-    "types": "source/index.d.ts",
+    "main": "index.vue",
+    "types": "index.d.ts",
     "scripts": {
         "remove-all-html-docs": "rimraf  ./ReadMe*.html  ./documents/**/*.html",
         "generate-html-docs": "npm  run  remove-all-html-docs    &&    wlc-md-to-html  -i ./*.md,./documents/**/*.md  -E3  -C ./documents/wlc-md-to-html.config.js  --to '*'",
-        "_lint:dist": "eslint    --fix    ./dist/**/*.vue",
-        "_lint:source": "eslint  --fix  ./source/**/*.vue  ./*.ts  ./gulpfile.esm.js/**/*  ./tsconfig.js",
+        "_lint:dist": "eslint    --fix  ./the-wrapper-only.vue  ./javascript/*.vue",
+        "_lint:source": "eslint  --fix  ./index.vue  ./*.d.ts  ./gulpfile.esm.js/**/*  ./tsconfig.js",
         "lint": "npm  run  _lint:source                                         &    npm  run  _lint:dist",
         "dist": "npm  run  _lint:source    &&    gulp   --silent  buildOnce    &&    npm  run  _lint:dist",
         "start": "gulp  --silent",
