发布包中重新包含了 source/index.vue。

--- a/.npmignore
+++ b/.npmignore
@@ -1,13 +1,11 @@
 .DS_Store
 .vscode
-.eslint*
-.markdown*
+node_modules
 /demos
 /documents
-node_modules
 /gulp*
-/source
-/ReadMe.*.html
-/ReadMe.html
-git*.sh
+.eslint*
+.markdown*
 /tsconfig*
+/ReadMe*.html
+git*.sh
