--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@wulechuan/echarts-vue2-component",
     "author": "wulechuan <wulechuan@live.com>",
-    "version": "0.3.0",
+    "version": "0.4.0",
     "description": "在 Vuejs 框架下方便的使用 eChartsjs。并支持 TypeScript 语法。",
     "license": "WTFPL",
     "keywords": [
@@ -12,6 +12,9 @@
         "echart",
         "echartsjs",
         "typescript",
+        "图表",
+        "数据图",
+        "图表绘制",
         "电子图表"
     ],
     "main": "source/index.vue",
