--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,26 @@
-.DS_Store
+# ----- 临时资料 ----------------------
+临时资料/
+
+
+
+
+
+# ----- 可从外界重复获得之资源 ----------
 node_modules
-/ReadMe.*.html
-/ReadMe.html
-/documents/**/*.html
+
+
+
+
+
+# ----- 可重复构建之资源 ---------------
+文档集/说明书/**/*.html
+ReadMe.html
+源代码/发布的源代码/
+
+
+
+
+
+# ----- 其他资源 ----------------------
+.DS_Store
+package-lock.json
