--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,10 +9,13 @@
         // ".npmignore": true,
         // ".gitignore": true,
         // "tsconfig.js*": true,
+        "源代码/发布的源代码": true
     },
     "search.exclude": {
         "**/node_modules": true,
         "**/bower_components": true,
-        "**/*.code-search": true
+        "**/*.code-search": true,
+        "源代码/发布的源代码": true,
+        "**/package-lock.json": true
     }
 }
