--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "@wulechuan/echarts-vue2-component",
     "author": "吴乐川 <wulechuan@live.com>",
     "license": "WTFPL",
-    "version": "0.5.0",
+    "version": "1.0.0",
     "description": "此为吴乐川的《已适配 Vuejs 2 框架的 eCharts “包裹”工具》，并支持 TypeScript 语法。",
     "main": "./源代码/发布的源代码/javascript/index.vue",
     "types": "./源代码/发布的源代码/typescripts/index.d.ts",
@@ -33,7 +33,7 @@
     },
     "peerDependencies": {
         "echarts": "^5.3.2",
-        "vue": "^2.6.11"
+        "vue": "^2.6.14"
     },
     "dependencies": {
         "lodash.debounce": "^4.0.8",
@@ -56,10 +56,11 @@
         "fs-extra": "^10.1.0",
         "gulp-postcss": "^9.0.1",
         "gulp-stylus": "^2.7.1",
+        "gulp-terser": "^2.1.0",
         "plugin-error": "^1.0.1",
         "rimraf": "^3.0.2",
+        "stylus": "^0.57.0",
         "through2": "^4.0.2",
-        "tslib": "^2.4.0",
         "typescript": "^4.6.3"
     },
     "keywords": [
