--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "author": "吴乐川 <wulechuan@live.com>",
     "license": "WTFPL",
     "version": "1.0.0",
-    "description": "此为吴乐川的《已适配 Vuejs 2 框架的 eCharts “包裹”工具》，并支持 TypeScript 语法。",
+    "description": "此为吴乐川的《适配 Vuejs 2 的 eCharts “包裹”部件》，并支持 TypeScript 语法。",
     "main": "./源代码/发布的源代码/typescript/index.vue",
     "directories": {
         "source": "源代码/原始的源代码",
