终于恢复了旧日模样（指代码实现的功能，非指代码本身）。

--- a/文档集/示范应用集/示范应用-1/采用-typescript-与-stylus-编写/package.json
+++ b/文档集/示范应用集/示范应用-1/采用-typescript-与-stylus-编写/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@wulechuan/echarts-vue2-component": "file:../../../..",
+        "echarts": "^5.3.2",
         "vue": "^2.6.14",
         "vue-class-component": "^7.2.3",
         "vue-property-decorator": "^9.1.2",
