--- a/文档集/示范应用集/示范应用-1/采用-javascript-与-sass-编写/package.json
+++ b/文档集/示范应用集/示范应用-1/采用-javascript-与-sass-编写/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@wulechuan/echarts-vue2-component": "file:../../../..",
         "core-js": "^3.8.3",
+        "echarts": "^5.3.2",
         "vue": "^2.6.14",
         "vue-router": "^3.5.1"
     },
