--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "@wulechuan/echarts-vue2-component",
     "author": "吴乐川 <wulechuan@live.com>",
     "license": "WTFPL",
-    "version": "1.1.2",
+    "version": "1.2.0",
     "description": "此为吴乐川的《适配 Vuejs 2 的 eCharts “包裹”部件》，并支持 TypeScript 语法。",
-    "main": "./源代码/发布的源代码/typescript/index.vue",
-    "types": "./源代码/发布的源代码/typescript/index.d.ts",
+    "main": "./源代码/发布的源代码/javascript/index.js",
+    "types": "./源代码/发布的源代码/types/index.d.ts",
     "directories": {
         "source": "源代码/原始的源代码",
         "dist": "源代码/发布的源代码",
@@ -18,7 +18,8 @@
         "检验以下代码：须发布的文件": "eslint  --fix  ./源代码/发布的源代码/**/*.vue  ./源代码/发布的源代码/**/*.js",
         "检验以下代码：原始的源文件": "eslint  --fix  ./源代码/原始的源代码/**/*.vue  ./源代码/原始的源代码/**/*.ts  ./gulpfile.esm.js/**/*",
         "检验所有代码": "npm         run  检验以下代码：原始的源文件                                         &    npm  run  检验以下代码：须发布的文件",
-        "构建所有须发布的文件": "npm  run  检验以下代码：原始的源文件    &&    gulp   --silent  buildOnce    &&    npm  run  检验以下代码：须发布的文件",
+        "从简构建所有须发布的文件": "gulp   --silent  buildOnce    &&    npm  run  检验以下代码：须发布的文件",
+        "构建所有须发布的文件": "npm  run  检验以下代码：原始的源文件    &&    npm  run  从简构建所有须发布的文件",
         "每当制作集得之版本之前": "npm  i    &&    npm  run  构建所有须发布的文件",
         "start": "gulp  --silent",
         "prepublishOnly": "npm  run  构建所有须发布的文件"
@@ -34,13 +35,13 @@
     },
     "devDependencies": {
         "@types/lodash.debounce": "^4.0.7",
-        "@typescript-eslint/eslint-plugin": "^5.21.0",
-        "@typescript-eslint/parser": "^5.21.0",
+        "@typescript-eslint/eslint-plugin": "^5.22.0",
+        "@typescript-eslint/parser": "^5.22.0",
         "@vue/eslint-config-typescript": "^10.0.0",
-        "@wulechuan/cli-scripts--git-push": "^2.0.2",
-        "@wulechuan/css-stylus-markdown-themes": "^7.5.1",
+        "@wulechuan/cli-scripts--git-push": "^2.0.3",
+        "@wulechuan/css-stylus-markdown-themes": "^7.6.2",
         "@wulechuan/gulp-classical-task-cycle": "^0.3.0",
-        "@wulechuan/vue2-sfc-from-typescript-to-javascript": "^0.5.1",
+        "@wulechuan/vue2-sfc-from-typescript-to-javascript": "^0.5.3",
         "cssnano": "^5.1.7",
         "eslint": "^8.14.0",
         "eslint-plugin-vue": "^8.7.1",
@@ -70,12 +71,27 @@
         "echarts",
         "echart",
         "echartsjs",
+        "vue component",
+        "vuejs component",
         "typescript",
         "图表",
         "数据图",
         "图表绘制",
         "电子图表",
         "自动改变尺寸",
-        "autoresize"
+        "自动改变宽高",
+        "自动改变长宽",
+        "自动改变大小",
+        "自适应尺寸",
+        "自适应宽高",
+        "自适应长宽",
+        "自适应大小",
+        "autoresize",
+        "auto resize",
+        "autoresizing",
+        "auto resizing",
+        "auto change size",
+        "auto change width and height",
+        "adaptive size"
     ]
 }
