--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "moduleResolution": "node",
         "experimentalDecorators": true,
         "skipLibCheck": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "declaration": true
     }
 }
