--- a/文档集/示范应用集/示范应用-1/采用-javascript-与-sass-编写/.gitignore
+++ b/文档集/示范应用集/示范应用-1/采用-javascript-与-sass-编写/.gitignore
@@ -1,19 +1,33 @@
-.DS_Store
-node_modules
-/dist
-
-
-# local env files
-.env.local
-.env.*.local
-
-# Log files
+# ----- 临时资料 ----------------------
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Editor directories and files
+
+
+
+
+# ----- 可从外界重复获得之资源 ----------
+node_modules
+
+
+
+
+
+# ----- 可重复构建之资源 ---------------
+ReadMe.html
+/dist
+
+
+
+
+
+# ----- 其他资源 ----------------------
+package-lock.json
+.env.local
+.env.*.local
+.DS_Store
 .idea
 .vscode
 *.suo
