--- a/文档集/示范应用集/示范应用-1/采用-javascript-与-sass-编写/package.json
+++ b/文档集/示范应用集/示范应用-1/采用-javascript-与-sass-编写/package.json
@@ -10,26 +10,27 @@
     },
     "dependencies": {
         "@wulechuan/echarts-vue2-component": "file:../../../..",
-        "core-js": "^3.8.3",
-        "echarts": "^5.3.2",
-        "vue": "^2.6.14",
-        "vue-router": "^3.5.1"
+        "core-js": "^3.23.3",
+        "echarts": "^5.3.3",
+        "vue": "^2.7.4",
+        "vue-router": "^2.8.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.12.16",
-        "@babel/eslint-parser": "^7.12.16",
-        "@vue/cli-plugin-babel": "~5.0.0",
-        "@vue/cli-plugin-eslint": "~5.0.0",
-        "@vue/cli-plugin-router": "~5.0.0",
-        "@vue/cli-service": "~5.0.0",
-        "@vue/eslint-config-standard": "^6.1.0",
-        "eslint": "^7.32.0",
-        "eslint-plugin-import": "^2.25.3",
+        "@babel/core": "^7.18.6",
+        "@babel/eslint-parser": "^7.18.2",
+        "@vue/cli-plugin-babel": "^5.0.8",
+        "@vue/cli-plugin-eslint": "^5.0.8",
+        "@vue/cli-plugin-router": "^5.0.8",
+        "@vue/cli-service": "^5.0.8",
+        "@vue/eslint-config-standard": "^7.0.0",
+        "@wulechuan/cli-scripts--npm-project-helpers": "^2.0.3",
+        "eslint": "^8.19.0",
+        "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-promise": "^5.1.0",
-        "eslint-plugin-vue": "^8.0.3",
-        "sass": "^1.32.7",
-        "sass-loader": "^12.0.0",
-        "vue-template-compiler": "^2.6.14"
+        "eslint-plugin-promise": "^6.0.0",
+        "eslint-plugin-vue": "^8.7.1",
+        "sass": "^1.53.0",
+        "sass-loader": "^13.0.2",
+        "vue-template-compiler": "^2.7.4"
     }
 }
